# CheckEmbed

./: .gitignore  LICENSE  README.md  pyproject.toml
CheckEmbed/: config_template.json
CheckEmbed/embedder/: __init__.py  embedder.py
CheckEmbed/embedding_models/: README.md  __init__.py  abstract_embedding_model.py  clip_vit_large.py  e5_mistral_7b_instruct.py  embeddinggpt.py  gte_qwen1_5_7b_instruct.py  sfr_embedding_mistral.py  stella.py
CheckEmbed/language_models/: README.md  __init__.py  abstract_language_model.py  chatgpt.py  chatollama.py
CheckEmbed/operations/: README.md  __init__.py  bertscore_operation.py  checkembed_operation.py  llm_as_a_judge_operation.py  operations.py  selfcheckgpt_operation.py
CheckEmbed/parser/: parser.py
CheckEmbed/plotters/: README.md  __init__.py  bert_plot.py  checkembed_plot.py  plot_operations.py  raw_embedding_heatmap.py  selfcheckgpt_plot.py
CheckEmbed/scheduler/: __init__.py  scheduler.py
CheckEmbed/utility/: __init__.py  stderr_filter.py  stderr_filter.txt  utility.py
CheckEmbed/vision_models/: README.md  __init__.py  abstract_vision_model.py  stable_diffusion3_5.py
examples/: README.md
examples/RAGTruth/: README.md  hallu_detect.py  main.py
examples/RAGTruth/dataset/: response.json  sampler.py
examples/description/: README.md
examples/description/different/: main.py  prompt_scheme.txt
examples/description/similar/: main.py  prompt_scheme.txt
examples/incremental_forced_hallucination/: README.md  main.py  prompt_scheme.txt  prompt_scheme_ground_truth.txt
examples/incremental_forced_hallucination/legal_summaries/: README.md  main.py  prompt_scheme.txt  prompt_scheme_ground_truth.txt
examples/incremental_forced_hallucination/legal_summaries/dataset/: legal_definitions.json
examples/incremental_forced_hallucination/operation_variants/: __init__.py  bertscore_operation_variant.py  checkembed_operation_variant.py  selfcheckgpt_operation_variant.py
examples/incremental_forced_hallucination/scientific_descriptions/: README.md  main.py
examples/legal_definitions/: README.md  main.py  prompt_scheme.txt
examples/performance_test/: README.md  data_extractor.py  main.py  plot.py
examples/vision/: README.md  main.py
examples/wiki_bio/: README.md  main.py
examples/wiki_bio/data/: download.py  passage_scores.json  passage_scores.py
paper/: README.md  plots.py  results.tar.bz2
