[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CheckEmbed"
version = "0.0.1"
authors = [
  { name="Maciej Besta", email="maciej.besta@inf.ethz.ch" },
  { name="Lorenzo Paleari", email="lpaleari@student.ethz.ch" },
  { name="Ales Kubicek", email="akubicek@student.ethz.ch" },
  { name="Robert Gerstenberger", email="gerstenberger.robert@gmail.com" },
  { name="Patrick Iff", email="patrick.iff@inf.ethz.ch" },
]
description = "Python package for 'CheckEmbed'"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "backoff>=2.2.1,<3.0.0",
  "openai>=1.0.0,<2.0.0",
  "matplotlib>=3.7.1,<4.0.0",
  "numpy>=1.24.3,<2.0.0",
  "selfcheckgpt>=0.1.7,<1.0.0",
  "bert-score>=0.3.13,<1.0.0",
  "transformers>=4.41.0,<5.0.0",
  "accelerate>=0.30.1,<1.0.0",
  "seaborn>=0.13.2,<1.0.0",
  "asyncio>=3.4.3,<4.0.0"
]

[project.optional-dependencies]
cuda = [
    "wheel",
    "flash-attn>=2.5.6,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/spcl/CheckEmbed"

[project.scripts]
