[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CheckEmbed"
version = "0.0.1"
authors = [
  { name="Maciej Besta", email="maciej.besta@inf.ethz.ch" },
  { name="Lorenzo Paleari", email="lpaleari@student.ethz.ch" },
  { name="Ales Kubicek", email="akubicek@student.ethz.ch" },
  { name="Robert Gerstenberger", email="gerstenberger.robert@gmail.com" },
  { name="Patrick Iff", email="patrick.iff@inf.ethz.ch" },
  { name="Eric Schreiber", email="eric.schreiber@inf.ethz.ch" },
]
description = "Python package for 'CheckEmbed'"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8.12,<3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "accelerate>=0.30.1,<0.35.0",
  "backoff>=2.2.1,<3.0.0",
  "bert-score>=0.3.13,<1.0.0",
  "faker>=25.8.0,<26.0.0",
  "huggingface-hub>=0.24.6,<0.26.0",
  "joblib>=1.4.2,<2.0.0",
  "matplotlib>=3.7.1,<4.0.0",
  "numpy>=1.24.3,<2.0.0",
  "openai>=1.0.0,<2.0.0",
  "packaging>=24.1,<25.0",
  "scikit-learn>=1.5.1,<2.0.0",
  "seaborn>=0.13.2,<0.14.0",
  "selfcheckgpt>=0.1.7,<1.0.0",
  "sentencepiece>=0.2.0,<0.3.0",
  "tiktoken>=0.7.0,<1.0.0",
  "torch==2.6.0",
  "transformers>=4.44.2,<5.0.0",
  "transformers[torch]",
  "wheel>=0.43.0,<1.0.0",
  "langchain>=0.2.11",
  "langchain_ollama",
  "pydantic>=2.8.2",
  "pandas",
  "scipy",
  "sklearn",
  "vllm"
]

[project.optional-dependencies]
cuda = [
  "xformers>=0.0.27,<0.0.40",
  "flash-attn>=2.5.6,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/spcl/CheckEmbed"

[project.scripts]
